--- a/blog_ui/src/css/app.scss
+++ b/blog_ui/src/css/app.scss
@@ -1,17 +1,23 @@
-::-webkit-scrollbar {
+html::-webkit-scrollbar {
   width: 10px;
   height: 10px;
   background-color: #f5f5f5;
 }
 
-::-webkit-scrollbar-thumb {
+html::-webkit-scrollbar-thumb {
   border-radius: 4px;
   background-color: #c0c4cc;
 }
 
-::-webkit-scrollbar-track {
+html::-webkit-scrollbar-track {
   border-radius: 4px;
   background-color: #f5f5f5;
+}
+
+// firefox scrollbar
+html {
+  scrollbar-width: thin;
+  scrollbar-color: #c0c4cc #f5f5f5;
 }
 
 input {
